fix sizing issues on smaller devices

--- a/public/stylesheets/audio-thing.css
+++ b/public/stylesheets/audio-thing.css
@@ -14,7 +14,7 @@
     user-select: none;
 }
 
-img {
+#bg {
     position: absolute;
     margin: 0;
     top: 0;
@@ -33,8 +33,8 @@ img {
     padding: 0;
     top: 10%;
     left: 4%;
-    width: 400px;
-    height: 600px;
+    width: 20.9%;
+    height: 60%;
     background: none;
     z-index: 2;
     display: none;
@@ -44,8 +44,8 @@ img {
 #trackBG {
     position: relative;
     margin-bottom: 1.5rem;
-    width: 400px;
-    height: 400px;
+    width: auto;
+    height: auto;
     border-radius: 15px;
     filter: drop-shadow(0 5mm 4mm black);
 }
